# db-benchmark

./: .gitignore  README.md  run.conf  run.sh
.github/workflows/: regression.yml
_benchplot/: benchplot-dict.R
_control/: solutions.csv
_launcher/: launcher.R  solution.R
_report/: report.R
haskell/: README.md  exec.sh  groupby-haskell.hs  haskell-benchmark.cabal  join-haskell.hs  setup-haskell.sh  stack.yaml  upg-haskell.sh  ver-haskell.sh
