name:                haskell-benchmark
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable groupby-haskell
  main-is:             groupby-haskell.hs
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , text >= 1.2
                     , vector >= 0.12
                     , cassava >= 0.5
                     , time >= 1.9
                     , process >= 1.6
                     , directory >= 1.3
                     , unordered-containers >= 0.2
                     , hashable >= 1.3
                     , deepseq >= 1.4
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N

executable join-haskell
  main-is:             join-haskell.hs
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , text >= 1.2
                     , vector >= 0.12
                     , cassava >= 0.5
                     , time >= 1.9
                     , process >= 1.6
                     , directory >= 1.3
                     , unordered-containers >= 0.2
                     , hashable >= 1.3
                     , deepseq >= 1.4
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
